fix a bug that TOC number not align with title

--- a/source/css/global_side.scss
+++ b/source/css/global_side.scss
@@ -228,6 +228,7 @@
         color: var(--Cbtn-content);
         text-align: center;
         font-family: "Hack", "monospace", monospace;
+        vertical-align: top;
     }
 
     @each $level in (3,4,5,6) {
